<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2015 Lunci Hua
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.
  -->

<resources>
    <string name="app_name">DumbThings</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dumb">I am dumb!</string>
    <string name="dumb_again">I am dumb again!</string>
    <string name="number_zero">0</string>
    <string name="default_sentence">I did a dumb thing!</string>
    <string name="default_tail"> --by DumbThings(Android)</string>
    <string name="share_dumb_thing_with">Share dumb thing with?</string>
    <string name="what_dumb_thing">What dumb thing you just did?</string>
    <string name="add_dumb_thing">Holy crap!</string>
    <string name="about">About</string>
    <string name="link">Link</string>
    <string name="dumb_thing_calendar">Dumb Things Calendar</string>

    <!--Link Account Info-->
    <string name="link_accounts">Link Accounts</string>
    <string name="unlink_facebook_warning">Unlink facebook account?</string>
    <string name="unlink_twitter_warning">Unlink twitter account?</string>
    <string name="unlink_google_plus_account">Unlink google plus account?</string>
    <string name="link_facebook_succeed">Facebook is linked.</string>
    <string name="link_twitter_succeed">Twitter is linked.</string>
    <string name="link_google_plus_succeed">Google plus is linked.</string>
    <string name="link_facebook_failed">Link Facebook failed.</string>
    <string name="link_twitter_failed">Link Twitter failed.</string>
    <string name="link_google_plus_failed">Link Google plus failed.</string>

    <!--Settings-->
    <string name="setting">Setting</string>
    <string name="share">Share</string>
    <string name="general">General</string>
    <string name="auto_share">Auto Sharing</string>
    <string name="preference_enable_prefix">Enable Auto Prefix.</string>
    <string name="preference_enable_prefix_summary">Append prefix automatically at front.</string>
    <string name="preference_enable_suffix">Enable Auto Suffix.</string>
    <string name="preference_enable_suffix_summary">Append suffix automatically at the end.</string>
    <string name="preference_default_prefix">Default Prefix</string>
    <string name="preference_default_suffix">Default Suffix</string>
    <string name="preference_enable_auto_share">Enable Auto Share Popup</string>
    <string name="preference_enable_auto_share_summary">Popup share dialog after adding a new dumb thing.</string>

    <string name="help_us">Become a Tester!</string>
    <string name="send_tester_request">Send request to developer:</string>
    <string name="send_tester_request_subject">Request as beta tester for TagGallery</string>
    <string name="send_tester_request_content">Hi,\n\nI want to help TagGallery improve its stability.\n\nI thereby agree to receive beta version which may be buggy.\n\n</string>

    <string name="about_me">&lt;a href=\"http://www.lunci.org\"&gt;Lunci H&lt;/a&gt;</string>
    <string name="email_address">lunci.app@gmail.com</string>
    <string name="author_name_string">Lunci H</string>
    <string name="author_string">Author</string>
    <string name="contact_string">Contact</string>
    <string name="email_string">Email</string>
    <string name="about_string">About</string>
    <string name="rate_this_app_string">Rate it!</string>
    
    <string name="auto_sharing_on_accounts">Auto Sharing on Accounts</string>
    <string name="auto_sharing_on_accounts_summary">Selected account will be used to share dumb things once clicked auto sharing button.</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="google_plus">Google Plus</string>
    <!--Error messages-->
    <string name="send_to_facebook_failed">Post on facebook failed. Please relink facebook.</string>
    <string name="send_to_facebook_permssion_failed">Facebook permission denied. Please relink facebook.</string>
    <string name="send_to_twitter_failed">Post on twitter failed. Please relink twitter.</string>
    <string name="network_not_available">Network connection is not available.</string>
    
    <!--Alert Info-->
    <string name="share_to_linked_accounts">Post to linked accounts?</string>
    <string name="share_to_linked_accounts_succeeded">Successfully post to all accounts!</string>
    <string name="please_link_at_least_one">Please link at least one account to use auto sharing.</string>
    <string name="please_set_at_least_one">Please enable at least one account in setting to use auto sharing.</string>
    <string name="please_add_dumbthing_first">Please add a dumb thing first.</string>
</resources>
