<!--
  ~ Copyright (c) 2015 Lunci Hua
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/share">
        <CheckBoxPreference
            android:key="preference_enable_prefix"
            android:title="@string/preference_enable_prefix"
            android:summary="@string/preference_enable_prefix_summary"
            android:defaultValue="true" />

        <EditTextPreference
            android:key="preference_default_prefix"
            android:title="@string/preference_default_prefix"
            android:defaultValue="@string/default_sentence"
            android:selectAllOnFocus="true"
            android:inputType="textCapWords"
            android:capitalize="words"
            android:singleLine="true"
            android:maxLines="1" />

        <CheckBoxPreference
            android:key="preference_enable_suffix"
            android:title="@string/preference_enable_suffix"
            android:summary="@string/preference_enable_suffix_summary"
            android:defaultValue="true" />

        <EditTextPreference
            android:key="preference_default_suffix"
            android:title="@string/preference_default_suffix"
            android:defaultValue="@string/default_tail"
            android:selectAllOnFocus="true"
            android:inputType="textCapWords"
            android:capitalize="words"
            android:singleLine="true"
            android:maxLines="1" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/general">
        <CheckBoxPreference
            android:key="preference_enable_auto_share_pop"
            android:title="@string/preference_enable_auto_share"
            android:summary="@string/preference_enable_auto_share_summary"
            android:defaultValue="true" />
    </PreferenceCategory>
</PreferenceScreen>
