<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2015 Lunci Hua
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="fill_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="6dp"
        tools:context="snaplog.activity.Activity_About" >
        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:focusable="false"
            android:src="@drawable/ic_launcher" />
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingTop="20dp"
            android:layout_marginBottom="20dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/author_string"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/textView_about_me"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:clickable="true"
                android:text="@string/author_name_string"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="italic"
                android:typeface="serif" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingTop="20dp"
            android:layout_marginBottom="20dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/contact_string"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:autoLink="all"
                android:linksClickable="true"
                android:text="@string/email_address"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="italic"
                android:typeface="serif" />
        </LinearLayout>

        <FrameLayout
            android:id="@+id/rate_it_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:clickable="true"
            android:gravity="center_horizontal"
            android:onClick="onClicked"
            android:paddingLeft="10dp"
            android:paddingTop="20dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/rate_this_app_string"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold" />
        </FrameLayout>
    </LinearLayout>
</ScrollView>